# hhh-cli

./: Cargo.toml  a.js  build.rs  demo.rs  gpt.md
fixtures/: rc.json
npm/: index.js  package.json  pnpm-lock.yaml
src/: init.rs  lib.rs  main.rs
src/init/: context.rs  mod.rs
src/pkgs/: demo.rs  mod.rs  pkg_json.rs  rc.rs  registry_url.rs
src/utils/: config.rs  constants.rs  mod.rs  monorepo.rs  update.rs
tests/: cli.rs
