[package]
name = "hhh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
configparser = "3.0.4"
confy = "0.6.1"
indicatif = "0.17.8"
ini = "1.3.0"
json_comments = "0.2.2"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
urlencoding = "2.1.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
