[package]
name = "hhh"
version = "0.1.0"
edition = "2021"

# 构建脚本：是在 cargo 构建项目时自动运行的脚本。它的主要作用是执行一些在编译时需要完成的任务，例如生成代码、配置编译器选项、设置环境变量等。
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
configparser = "3.0.4"
confy = "0.6.1"
indicatif = "0.17.8"
ini = "1.3.0"
json_comments = "0.2.2"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
semver = "1.0.23"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
urlencoding = "2.1.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
